crates/check_cli/tests/snapshots/main_commands_check/file_too_large.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - check.js
  


```

# Emitted Messages

```block
check.js check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The size of the file is 1.0 MiB, which exceeds the configured maximum of 1.0 MiB for this project.
    Use the `files.maxSize` configuration to change the maximum size of files processed, or `files.includes` to ignore the file.
  

```

```block
Checked 0 files in <TIME>. No fixes applied.
```
