crates/check_cli/tests/snapshots/main_commands_check/fs_error_infinite_symlink_expansion_to_dirs.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - <TEMP_DIR>/check_rome_test_infinite_symlink_expansion_to_dirs
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
