crates/check_cli/tests/snapshots/main_commands_check/fs_files_ignore_symlink.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 2 files.
```
