crates/check_cli/tests/snapshots/main_commands_check/html_enabled_by_arg_check.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.html`

```html
<!DOCTYPE html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
